--- a/lab1/homework-1-vacuum-cleaner.ipynb
+++ b/lab1/homework-1-vacuum-cleaner.ipynb
@@ -93,7 +93,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{(0, 0): 'Clean', (1, 0): 'Dirty'}"
+      "text/plain": "{(0, 0): 'Dirty', (1, 0): 'Clean'}"
      },
      "execution_count": 4,
      "metadata": {},
@@ -174,8 +174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Agent> perceives ((1, 0), 'Dirty') and does Suck\n",
       "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
+      "<Agent> perceives ((0, 0), 'Dirty') and does Suck\n",
       "<Agent> perceives ((0, 0), 'Clean') and does Right\n",
       "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
       "<Agent> perceives ((0, 0), 'Clean') and does Right\n",
@@ -218,7 +218,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, -38.945),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 9.05)]"
+      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, -39.231),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 8.79)]"
      },
      "execution_count": 10,
      "metadata": {},
@@ -244,7 +244,7 @@
     "\n",
     "Odpowiedź:\n",
     "* częsciowo obserwowalne\n",
-    "* deterministyczne\n",
+    "* stochastyczne\n",
     "* statyczne\n",
     "* jednoagentowy\n",
     "* czas - ciągły\n",
@@ -297,7 +297,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, 12.645),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 33.59)]"
+      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, 12.667),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 33.89)]"
      },
      "execution_count": 12,
      "metadata": {},
@@ -322,6 +322,8 @@
     "\n",
     "Napisz program agenta, który będzie (średnio) dużo lepszy dla tego środowiska (50 kroków, z random_dirt_prob=0.05) niż ModelBaseVacuumAgent oraz ReflexVacuumAgent. Opisz działanie swojego programu, na podstawie jaki przesłanek on działa, jakbyś go zmodyfikował gdyby prawdopodobieństwo zabrudzenia pokoju (random_dirt_prob) się zmieniło?\n",
     "\n",
+    "Po 10 krokach bezczynności agent zmienia pokój oraz w przed ostatnim ruchu sprawdza pokój w którym go nie ma. Jeśli pradopodobieństwo zabrudzenia pokoju by się zmieniło, to bym zmienił czas oczekiwania odrwotnie proporcjonalnie do wartości prawdopodobieństwa zabrudzenia.\n",
+    "\n",
     "Punktacja za wynik (sprawdzarka zrobi 50000 powtórzeń):\n",
     "* \\> 41: 1 pkt.\n",
     "* \\> 42: 2 pkt.\n",
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +352,6 @@
     "    def program(percept):\n",
     "        # Zwróć jedną z dostępnych akcji: {'Suck', 'Right', 'Left', 'NoOP'}\n",
     "        nonlocal i, step\n",
-    "        step += 1\n",
     "        location, status = percept\n",
     "        if status == 'Dirty':\n",
     "            return 'Suck'\n",
@@ -371,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function __main__.MyVacuumAgent()>, 45.27788)]"
+      "text/plain": "[(<function __main__.MyVacuumAgent()>, 44.46358)]"
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,137 +401,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4c10>, 13.052)]\n",
-      "1\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67f40>, 32.592)]\n",
-      "2\n",
-      "[(<function MyVacuumAgent at 0x7f8fa4328550>, 39.977)]\n",
-      "3\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43824d0>, 42.821)]\n",
-      "4\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4ca0>, 43.937)]\n",
-      "5\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67eb0>, 45.061)]\n",
-      "6\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43280d0>, 45.356)]\n",
-      "7\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43827a0>, 45.54)]\n",
-      "8\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4c10>, 45.083)]\n",
-      "9\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67f40>, 44.041)]\n",
-      "10\n",
-      "[(<function MyVacuumAgent at 0x7f8fa4328550>, 44.072)]\n",
-      "11\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43824d0>, 42.258)]\n",
-      "12\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4ca0>, 43.62)]\n",
-      "13\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67eb0>, 44.95)]\n",
-      "14\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43280d0>, 43.071)]\n",
-      "15\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43827a0>, 39.866)]\n",
-      "16\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4c10>, 40.29)]\n",
-      "17\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67f40>, 41.49)]\n",
-      "18\n",
-      "[(<function MyVacuumAgent at 0x7f8fa4328550>, 41.62)]\n",
-      "19\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43824d0>, 41.511)]\n",
-      "20\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4ca0>, 42.869)]\n",
-      "21\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67eb0>, 40.789)]\n",
-      "22\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43280d0>, 39.786)]\n",
-      "23\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43827a0>, 36.115)]\n",
-      "24\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4c10>, 36.863)]\n",
-      "25\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67f40>, 36.44)]\n",
-      "26\n",
-      "[(<function MyVacuumAgent at 0x7f8fa4328550>, 35.84)]\n",
-      "27\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43824d0>, 37.29)]\n",
-      "28\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4ca0>, 36.89)]\n",
-      "29\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67eb0>, 36.49)]\n",
-      "30\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43280d0>, 36.72)]\n",
-      "31\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43827a0>, 37.25)]\n",
-      "32\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4c10>, 36.4)]\n",
-      "33\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67f40>, 36.52)]\n",
-      "34\n",
-      "[(<function MyVacuumAgent at 0x7f8fa4328550>, 37.73)]\n",
-      "35\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43824d0>, 37.29)]\n",
-      "36\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4ca0>, 36.97)]\n",
-      "37\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67eb0>, 36.78)]\n",
-      "38\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43280d0>, 37.34)]\n",
-      "39\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43827a0>, 38.31)]\n",
-      "40\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4c10>, 37.51)]\n",
-      "41\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67f40>, 37.534)]\n",
-      "42\n",
-      "[(<function MyVacuumAgent at 0x7f8fa4328550>, 36.974)]\n",
-      "43\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43824d0>, 38.599)]\n",
-      "44\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4ca0>, 35.985)]\n",
-      "45\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67eb0>, 35.367)]\n",
-      "46\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43280d0>, 32.329)]\n",
-      "47\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43827a0>, 30.331)]\n",
-      "48\n",
-      "[(<function MyVacuumAgent at 0x7f8fa43a4c10>, 30.105)]\n",
-      "49\n",
-      "[(<function MyVacuumAgent at 0x7f8fa5c67f40>, 28.919)]\n"
+      "0.0\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 29.4224)]\n",
+      "0.05\n",
+      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 29.5594)]\n",
+      "0.1\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 37.53474)]\n",
+      "0.15\n",
+      "[(<function MyVacuumAgent at 0x7fde101d8160>, 37.4027)]\n",
+      "0.2\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 37.30772)]\n",
+      "0.25\n",
+      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 37.54138)]\n",
+      "0.3\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 40.38698)]\n",
+      "0.35\n",
+      "[(<function MyVacuumAgent at 0x7fde101d8160>, 41.32554)]\n",
+      "0.4\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 41.37824)]\n",
+      "0.45\n",
+      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 41.56666)]\n",
+      "0.5\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 42.89148)]\n",
+      "0.55\n",
+      "[(<function MyVacuumAgent at 0x7fde101d8160>, 42.92734)]\n",
+      "0.6\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 43.26822)]\n",
+      "0.65\n",
+      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 43.07384)]\n",
+      "0.7\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 42.5019)]\n",
+      "0.75\n",
+      "[(<function MyVacuumAgent at 0x7fde101d8160>, 41.52896)]\n",
+      "0.8\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 40.19984)]\n",
+      "0.85\n",
+      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 38.04758)]\n",
+      "0.9\n",
+      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 34.25282)]\n",
+      "0.95\n",
+      "[(<function MyVacuumAgent at 0x7fde101d8160>, 26.99262)]\n"
      ]
     }
    ],
    "source": [
-    "for val in range(50):\n",
-    "    print(val)\n",
+    "def calculate_chance(times_uncleared):\n",
+    "    return 0.95**times_uncleared\n",
+    "\n",
+    "for val in range(20):\n",
+    "    probability = val / 20\n",
+    "    print(probability)\n",
+    "\n",
     "    def MyVacuumAgent():\n",
-    "        i = val\n",
+    "        left_uncleared, right_uncleared = 0, 0\n",
     "\n",
     "        def program(percept):\n",
     "            # Zwróć jedną z dostępnych akcji: {'Suck', 'Right', 'Left', 'NoOP'}\n",
-    "            nonlocal i\n",
+    "            nonlocal left_uncleared, right_uncleared\n",
     "            location, status = percept\n",
     "            if status == 'Dirty':\n",
+    "                if location == loc_A:\n",
+    "                    right_uncleared += 1\n",
+    "                    left_uncleared = 0\n",
+    "                else:\n",
+    "                    left_uncleared += 1\n",
+    "                    right_uncleared = 0\n",
     "                return 'Suck'\n",
-    "            elif location == loc_A and i == 0:\n",
-    "                i = val\n",
+    "            elif location == loc_A and calculate_chance(right_uncleared) < probability:\n",
+    "                left_uncleared =+ 1\n",
+    "                right_uncleared += 1\n",
     "                return 'Right'\n",
-    "            elif location == loc_B and i == 0:\n",
-    "                i = val\n",
+    "            elif location == loc_B and calculate_chance(left_uncleared) < probability:\n",
+    "                left_uncleared += 1\n",
+    "                right_uncleared += 1\n",
     "                return 'Left'\n",
     "            else:\n",
-    "                i -= 1\n",
+    "                right_uncleared += 1\n",
+    "                left_uncleared += 1\n",
     "                return 'NoOP'\n",
     "\n",
     "        return Agent(program)\n",
     "\n",
+    "\n",
     "    def env_factory():\n",
     "        return TrivialVacuumEnvironmentWithCats(random_dirt_prob=0.05)\n",
     "\n",
-    "    print(compare_agents(env_factory, [MyVacuumAgent], 1000, 50))"
+    "\n",
+    "    print(compare_agents(env_factory, [MyVacuumAgent], 50000, 50))"
    ],
    "metadata": {
     "collapsed": false
