dirty: po rozmowie z Jankiem

--- a/lab1/homework-1-vacuum-cleaner.ipynb
+++ b/lab1/homework-1-vacuum-cleaner.ipynb
@@ -93,7 +93,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{(0, 0): 'Dirty', (1, 0): 'Clean'}"
+      "text/plain": "{(0, 0): 'Dirty', (1, 0): 'Dirty'}"
      },
      "execution_count": 4,
      "metadata": {},
@@ -144,13 +144,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loc (0, 0): []\n",
-      "loc (1, 0): [<Agent>]\n"
+      "loc (0, 0): [<Agent>]\n",
+      "loc (1, 0): []\n"
      ]
     },
     {
      "data": {
-      "text/plain": "(1, 0)"
+      "text/plain": "(0, 0)"
      },
      "execution_count": 7,
      "metadata": {},
@@ -174,9 +174,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
       "<Agent> perceives ((0, 0), 'Dirty') and does Suck\n",
       "<Agent> perceives ((0, 0), 'Clean') and does Right\n",
+      "<Agent> perceives ((1, 0), 'Dirty') and does Suck\n",
       "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
       "<Agent> perceives ((0, 0), 'Clean') and does Right\n",
       "<Agent> perceives ((1, 0), 'Clean') and does Left\n",
@@ -199,7 +199,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "1"
+      "text/plain": "12"
      },
      "execution_count": 9,
      "metadata": {},
@@ -218,7 +218,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, -39.231),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 8.79)]"
+      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, -38.78),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 9.2)]"
      },
      "execution_count": 10,
      "metadata": {},
@@ -297,7 +297,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, 12.667),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 33.89)]"
+      "text/plain": "[(<function aima3.agents.ReflexVacuumAgent()>, 13.052),\n (<function aima3.agents.ModelBasedVacuumAgent()>, 33.5)]"
      },
      "execution_count": 12,
      "metadata": {},
@@ -322,7 +322,7 @@
     "\n",
     "Napisz program agenta, który będzie (średnio) dużo lepszy dla tego środowiska (50 kroków, z random_dirt_prob=0.05) niż ModelBaseVacuumAgent oraz ReflexVacuumAgent. Opisz działanie swojego programu, na podstawie jaki przesłanek on działa, jakbyś go zmodyfikował gdyby prawdopodobieństwo zabrudzenia pokoju (random_dirt_prob) się zmieniło?\n",
     "\n",
-    "Po 10 krokach bezczynności agent zmienia pokój oraz w przed ostatnim ruchu sprawdza pokój w którym go nie ma. Jeśli pradopodobieństwo zabrudzenia pokoju by się zmieniło, to bym zmienił czas oczekiwania odrwotnie proporcjonalnie do wartości prawdopodobieństwa zabrudzenia.\n",
+    "**Po 10 krokach bezczynności agent zmienia pokój oraz w przed ostatnim ruchu sprawdza pokój w którym go nie ma. Jeśli pradopodobieństwo zabrudzenia pokoju by się zmieniło, to bym zmienił czas oczekiwania odrwotnie proporcjonalnie do wartości prawdopodobieństwa zabrudzenia.**\n",
     "\n",
     "Punktacja za wynik (sprawdzarka zrobi 50000 powtórzeń):\n",
     "* \\> 41: 1 pkt.\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,21 +347,23 @@
     "\n",
     "def MyVacuumAgent():\n",
     "    step = 0\n",
-    "    i = 10\n",
+    "    i =9\n",
     "\n",
     "    def program(percept):\n",
     "        # Zwróć jedną z dostępnych akcji: {'Suck', 'Right', 'Left', 'NoOP'}\n",
     "        nonlocal i, step\n",
+    "        step += 1\n",
     "        location, status = percept\n",
     "        if status == 'Dirty':\n",
+    "            i -= 1\n",
     "            return 'Suck'\n",
     "        elif step == 49:\n",
     "            return 'Right' if location == loc_A else 'Left'\n",
     "        elif location == loc_A and i == 0:\n",
-    "            i = 10\n",
+    "            i = 9\n",
     "            return 'Right'\n",
     "        elif location == loc_B and i == 0:\n",
-    "            i = 10\n",
+    "            i = 9\n",
     "            return 'Left'\n",
     "        else:\n",
     "            i -= 1\n",
@@ -372,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "[(<function __main__.MyVacuumAgent()>, 44.46358)]"
+      "text/plain": "[(<function __main__.MyVacuumAgent()>, 45.00748)]"
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,52 +397,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 29.4224)]\n",
-      "0.05\n",
-      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 29.5594)]\n",
-      "0.1\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 37.53474)]\n",
-      "0.15\n",
-      "[(<function MyVacuumAgent at 0x7fde101d8160>, 37.4027)]\n",
-      "0.2\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 37.30772)]\n",
-      "0.25\n",
-      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 37.54138)]\n",
-      "0.3\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 40.38698)]\n",
-      "0.35\n",
-      "[(<function MyVacuumAgent at 0x7fde101d8160>, 41.32554)]\n",
-      "0.4\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 41.37824)]\n",
-      "0.45\n",
-      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 41.56666)]\n",
-      "0.5\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 42.89148)]\n",
-      "0.55\n",
-      "[(<function MyVacuumAgent at 0x7fde101d8160>, 42.92734)]\n",
-      "0.6\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 43.26822)]\n",
-      "0.65\n",
-      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 43.07384)]\n",
-      "0.7\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 42.5019)]\n",
-      "0.75\n",
-      "[(<function MyVacuumAgent at 0x7fde101d8160>, 41.52896)]\n",
-      "0.8\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3d90>, 40.19984)]\n",
-      "0.85\n",
-      "[(<function MyVacuumAgent at 0x7fde101d80d0>, 38.04758)]\n",
-      "0.9\n",
-      "[(<function MyVacuumAgent at 0x7fde101b3a30>, 34.25282)]\n",
-      "0.95\n",
-      "[(<function MyVacuumAgent at 0x7fde101d8160>, 26.99262)]\n"
+      "0\n",
+      "[(<function MyVacuumAgent at 0x7fd82079af80>, 12.3392)]\n",
+      "1\n",
+      "[(<function MyVacuumAgent at 0x7fd8292d70a0>, 33.4902)]\n",
+      "2\n",
+      "[(<function MyVacuumAgent at 0x7fd8206d52d0>, 40.07334)]\n",
+      "3\n",
+      "[(<function MyVacuumAgent at 0x7fd820559ab0>, 42.7482)]\n",
+      "4\n",
+      "[(<function MyVacuumAgent at 0x7fd820559bd0>, 44.45316)]\n",
+      "5\n",
+      "[(<function MyVacuumAgent at 0x7fd8292d70a0>, 45.08842)]\n",
+      "6\n",
+      "[(<function MyVacuumAgent at 0x7fd8205155a0>, 45.36358)]\n",
+      "7\n",
+      "[(<function MyVacuumAgent at 0x7fd82055a710>, 45.63912)]\n",
+      "8\n",
+      "[(<function MyVacuumAgent at 0x7fd820559bd0>, 45.49252)]\n",
+      "9\n",
+      "[(<function MyVacuumAgent at 0x7fd8292d75b0>, 45.59162)]\n",
+      "10\n",
+      "[(<function MyVacuumAgent at 0x7fd82079af80>, 45.15296)]\n",
+      "11\n",
+      "[(<function MyVacuumAgent at 0x7fd820559ab0>, 45.28088)]\n",
+      "12\n",
+      "[(<function MyVacuumAgent at 0x7fd82055a710>, 44.96612)]\n",
+      "13\n",
+      "[(<function MyVacuumAgent at 0x7fd82079af80>, 44.52282)]\n",
+      "14\n",
+      "[(<function MyVacuumAgent at 0x7fd8206d52d0>, 44.16324)]\n",
+      "15\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[21], line 37\u001B[0m\n\u001B[1;32m     33\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21menv_factory\u001B[39m():\n\u001B[1;32m     34\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m TrivialVacuumEnvironmentWithCats(random_dirt_prob\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.05\u001B[39m)\n\u001B[0;32m---> 37\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mcompare_agents\u001B[49m\u001B[43m(\u001B[49m\u001B[43menv_factory\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43mMyVacuumAgent\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m50000\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m50\u001B[39;49m\u001B[43m)\u001B[49m)\n",
+      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/zmio-BbFn6q4X-py3.10/lib/python3.10/site-packages/aima3/agents.py:944\u001B[0m, in \u001B[0;36mcompare_agents\u001B[0;34m(EnvFactory, AgentFactories, n, steps)\u001B[0m\n\u001B[1;32m    939\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompare_agents\u001B[39m(EnvFactory, AgentFactories, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m, steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m):\n\u001B[1;32m    940\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"See how well each of several agents do in n instances of an environment.\u001B[39;00m\n\u001B[1;32m    941\u001B[0m \u001B[38;5;124;03m    Pass in a factory (constructor) for environments, and several for agents.\u001B[39;00m\n\u001B[1;32m    942\u001B[0m \u001B[38;5;124;03m    Create n instances of the environment, and run each agent in copies of\u001B[39;00m\n\u001B[1;32m    943\u001B[0m \u001B[38;5;124;03m    each one for steps. Return a list of (agent, average-score) tuples.\"\"\"\u001B[39;00m\n\u001B[0;32m--> 944\u001B[0m     envs \u001B[38;5;241m=\u001B[39m [EnvFactory() \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(n)]\n\u001B[1;32m    945\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m [(A, test_agent(A, steps, copy\u001B[38;5;241m.\u001B[39mdeepcopy(envs)))\n\u001B[1;32m    946\u001B[0m             \u001B[38;5;28;01mfor\u001B[39;00m A \u001B[38;5;129;01min\u001B[39;00m AgentFactories]\n",
+      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/zmio-BbFn6q4X-py3.10/lib/python3.10/site-packages/aima3/agents.py:944\u001B[0m, in \u001B[0;36m<listcomp>\u001B[0;34m(.0)\u001B[0m\n\u001B[1;32m    939\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcompare_agents\u001B[39m(EnvFactory, AgentFactories, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m, steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m):\n\u001B[1;32m    940\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"See how well each of several agents do in n instances of an environment.\u001B[39;00m\n\u001B[1;32m    941\u001B[0m \u001B[38;5;124;03m    Pass in a factory (constructor) for environments, and several for agents.\u001B[39;00m\n\u001B[1;32m    942\u001B[0m \u001B[38;5;124;03m    Create n instances of the environment, and run each agent in copies of\u001B[39;00m\n\u001B[1;32m    943\u001B[0m \u001B[38;5;124;03m    each one for steps. Return a list of (agent, average-score) tuples.\"\"\"\u001B[39;00m\n\u001B[0;32m--> 944\u001B[0m     envs \u001B[38;5;241m=\u001B[39m [\u001B[43mEnvFactory\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(n)]\n\u001B[1;32m    945\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m [(A, test_agent(A, steps, copy\u001B[38;5;241m.\u001B[39mdeepcopy(envs)))\n\u001B[1;32m    946\u001B[0m             \u001B[38;5;28;01mfor\u001B[39;00m A \u001B[38;5;129;01min\u001B[39;00m AgentFactories]\n",
+      "Cell \u001B[0;32mIn[21], line 34\u001B[0m, in \u001B[0;36menv_factory\u001B[0;34m()\u001B[0m\n\u001B[1;32m     33\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21menv_factory\u001B[39m():\n\u001B[0;32m---> 34\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mTrivialVacuumEnvironmentWithCats\u001B[49m\u001B[43m(\u001B[49m\u001B[43mrandom_dirt_prob\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0.05\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[11], line 9\u001B[0m, in \u001B[0;36mTrivialVacuumEnvironmentWithCats.__init__\u001B[0;34m(self, random_dirt_prob, seed)\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, random_dirt_prob\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.05\u001B[39m, seed\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[1;32m      8\u001B[0m     \u001B[38;5;28msuper\u001B[39m(TrivialVacuumEnvironmentWithCats, \u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__init__\u001B[39m()\n\u001B[0;32m----> 9\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mrandom \u001B[38;5;241m=\u001B[39m \u001B[43mrandom\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mRandom\u001B[49m\u001B[43m(\u001B[49m\u001B[43mseed\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     10\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mrandom_dirt_prob \u001B[38;5;241m=\u001B[39m random_dirt_prob\n",
+      "File \u001B[0;32m/usr/lib/python3.10/random.py:119\u001B[0m, in \u001B[0;36mRandom.__init__\u001B[0;34m(self, x)\u001B[0m\n\u001B[1;32m    104\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Random number generator base class used by bound module functions.\u001B[39;00m\n\u001B[1;32m    105\u001B[0m \n\u001B[1;32m    106\u001B[0m \u001B[38;5;124;03mUsed to instantiate instances of Random to get generators that don't\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    114\u001B[0m \n\u001B[1;32m    115\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    117\u001B[0m VERSION \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m3\u001B[39m     \u001B[38;5;66;03m# used by getstate/setstate\u001B[39;00m\n\u001B[0;32m--> 119\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, x\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[1;32m    120\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Initialize an instance.\u001B[39;00m\n\u001B[1;32m    121\u001B[0m \n\u001B[1;32m    122\u001B[0m \u001B[38;5;124;03m    Optional argument x controls seeding, as for Random.seed().\u001B[39;00m\n\u001B[1;32m    123\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m    125\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mseed(x)\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -449,35 +458,29 @@
     "    return 0.95**times_uncleared\n",
     "\n",
     "for val in range(20):\n",
-    "    probability = val / 20\n",
-    "    print(probability)\n",
+    "    print(val)\n",
     "\n",
     "    def MyVacuumAgent():\n",
-    "        left_uncleared, right_uncleared = 0, 0\n",
+    "        step = 0\n",
+    "        i = val\n",
     "\n",
     "        def program(percept):\n",
     "            # Zwróć jedną z dostępnych akcji: {'Suck', 'Right', 'Left', 'NoOP'}\n",
-    "            nonlocal left_uncleared, right_uncleared\n",
+    "            nonlocal i, step\n",
+    "            step += 1\n",
     "            location, status = percept\n",
     "            if status == 'Dirty':\n",
-    "                if location == loc_A:\n",
-    "                    right_uncleared += 1\n",
-    "                    left_uncleared = 0\n",
-    "                else:\n",
-    "                    left_uncleared += 1\n",
-    "                    right_uncleared = 0\n",
     "                return 'Suck'\n",
-    "            elif location == loc_A and calculate_chance(right_uncleared) < probability:\n",
-    "                left_uncleared =+ 1\n",
-    "                right_uncleared += 1\n",
+    "            elif step == 49:\n",
+    "                return 'Right' if location == loc_A else 'Left'\n",
+    "            elif location == loc_A and i == 0:\n",
+    "                i = val\n",
     "                return 'Right'\n",
-    "            elif location == loc_B and calculate_chance(left_uncleared) < probability:\n",
-    "                left_uncleared += 1\n",
-    "                right_uncleared += 1\n",
+    "            elif location == loc_B and i == 0:\n",
+    "                i = val\n",
     "                return 'Left'\n",
     "            else:\n",
-    "                right_uncleared += 1\n",
-    "                left_uncleared += 1\n",
+    "                i -= 1\n",
     "                return 'NoOP'\n",
     "\n",
     "        return Agent(program)\n",
